Issue 1: Set word wrap. It seems the overflow only occurs on certain markdown pages, not all markdown pages. It happens on markdown pages with longer articles with no word wrap.

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -55,7 +55,7 @@ h1, h2, h3, h4, h5 {
 .navbar {
   display: flex;
   align-items: center;
-  justify-content: center;  /* Centers the navbar */
+  justify-content: center;
   padding: 0 1rem;
   position: sticky;
   top: 0;
@@ -65,14 +65,14 @@ h1, h2, h3, h4, h5 {
   .navbar__inner {
     display: flex;
     align-items: center;
-    justify-content: center;  /* Space between logo (left) and navbar items (centered) */
+    justify-content: center;
     width: 100%;
   }
 
   .navbar__brand {
-    display: flex;  /* Make sure logo is visible */
+    display: flex;
     align-items: left;
-    justify-content: flex-start;  /* Align the logo to the left */
+    justify-content: flex-start;
     margin-right: 0px; 
   }
 
@@ -91,7 +91,7 @@ h1, h2, h3, h4, h5 {
     font-weight: bold;
     display: flex;
     align-items: center;
-    justify-content: center;  /* Center the navbar items */
+    justify-content: center;
     margin-left: auto;
   }
 
@@ -174,19 +174,19 @@ h1, h2, h3, h4, h5 {
 /* Add 10px top padding for theme-doc-markdown and markdown classes */
 .theme-doc-markdown,
 .markdown {
-  margin-right: 0; // Remove margin
   // width: 100%;     // Set width to auto to allow it to expand
-  margin-left: 0;
-  margin-right: 0;
-  padding-top: 10px;
+  margin-right: 0; // Remove margin
+  overflow-wrap: break-word;
+  word-wrap: break-word;
   padding-left: 20px;
   padding-right: 3px;
+  padding-top: 10px;
+  margin-left: 0;
+  margin-right: 0;
 }
-
 
 /* Adjust margin for larger screens */
 @media (min-width: 1440px) {
-
   .main-wrapper {
     display: flex;
     flex-direction: column;
@@ -205,7 +205,6 @@ h1, h2, h3, h4, h5 {
     align-items: center;
     overflow: hidden;
   }
-
 }
 
 footer.footer {
@@ -221,4 +220,3 @@ footer.footer {
   justify-content: center;
   width: 100%;
 }
-
